[package]
name = "todo_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
dotenv = "0.15.0"
config = "0.13.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive= "0.2.0"
tokio-postgres = "0.7.5"
deadpool-postgres = {version = "0.10.2", features = ['serde']}
env_logger = "0.9.0"
log = "0.4.0"