[package]
name = "todo_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.137", features = ["derive"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
paperclip = { version = "0.7", features = ["actix4"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
config = "0.13.0"
env_logger = "0.9.0"
log = "0.4.17"
slog = "2.7.0"
slog-term = "2.7.0"
slog-async = "2.7.0"
jsonwebtoken = "8.1.1"
sha2 = { version = "0.10", default-features = false }
chrono = { version = "0.4.19", features = ['serde'] }
futures = "0.3.21"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
